--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,9 @@
             <nav class="nav justify-content-center">
                 <a class="nav-link active" href="{{ path('accueil') }}">Accueil</a>
                 <a class="nav-link" href="{{ path('cgu') }}">CGU</a>
+                <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                <a class="nav-link" href="{{ path('app_logout') }}">Deconnexion</a>
+                <a class="nav-link" href="{{ path('app_register') }}">s'enregistrer</a>
   
             </nav>
 
