--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,9 @@
                 <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
                 <a class="nav-link" href="{{ path('app_logout') }}">Deconnexion</a>
                 <a class="nav-link" href="{{ path('app_register') }}">s'enregistrer</a>
+                <a class="nav-link" href="{{ path('utilisateur_new') }}">ajouter utilisateur</a>
+                <a class="nav-link" href="{{ path('utilisateur_all') }}">Tous les utilisateurs</a>
+               
   
             </nav>
 
