--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,12 +24,19 @@
                 <a class="nav-link active" href="{{ path('accueil') }}">Accueil</a>
                 <a class="nav-link" href="{{ path('cgu') }}">CGU</a>
                 <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                {% if is_granted('ROLE_USER') %}
                 <a class="nav-link" href="{{ path('app_logout') }}">Deconnexion</a>
+                {% endif %}
                 <a class="nav-link" href="{{ path('app_register') }}">s'enregistrer</a>
+
+                {% if is_granted('ROLE_ADMIN') %}
                 <a class="nav-link" href="{{ path('utilisateur_new') }}">ajouter utilisateur</a>
+                {% endif %}
                 <a class="nav-link" href="{{ path('utilisateur_all') }}">Tous les utilisateurs</a>
                 <a class="nav-link" href="{{ path('article_all') }}">Tous les articles</a>
+                {% if is_granted('ROLE_ECRIVAIN') %}
                 <a class="nav-link" href="{{ path('new_article') }}">créer article</a>
+                {% endif %}
               
                
   
