--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,6 +38,9 @@
                 <a class="nav-link" href="{{ path('new_article') }}">créer article</a>
                 {% endif %}
               
+                <a class="nav-link" href="{{ path('new_commentaire') }}">créer un commentaire</a>
+         
+              
                
   
             </nav>
